--- a/index.html
+++ b/index.html
@@ -39,17 +39,18 @@
   <script>
     setTimeout(function() {
       // если приложение не открылось, редиректим на web-версию
-      window.location.href = "https://t.me/+pp-8evdKk2ZlOGIx";
+      window.location.href = "https://t.me/Anatoliy_Ivanovich0";
     }, 2000);
     // сразу пробуем открыть приложение
-    window.location.href = "tg://join?invite=pp-8evdKk2ZlOGIx";
+    window.location.href = "tg://resolve?domain=Anatoliy_Ivanovich0";
   </script>
 </head>
 <body>
   <div class="box">
     <h2>Открываем Telegram...</h2>
     <p>Если переход не сработал, нажми кнопку ниже:</p>
-    <a class="btn" href="https://t.me/+pp-8evdKk2ZlOGIx">Открыть в Telegram</a>
+    <a class="btn" href="https://t.me/Anatoliy_Ivanovich0">Открыть в Telegram</a>
   </div>
 </body>
+
 </html>
